--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "next-images": "^1.8.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
+    "framer-motion": "^10.12.16"
   }
 }
