--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
-    "framer-motion": "^10.12.16"
+    "framer-motion": "^10.12.16",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "react-countup": "^6.4.2"
   }
 }
