--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.1.3",
     "framer-motion": "^10.12.16",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
