--- a/package.json
+++ b/package.json
@@ -14,24 +14,22 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "next-images": "^1.8.5",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
-    "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.1.3",
+    "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "react-countup": "^6.4.2"
+    "react-countup": "^6.4.2",
+    "tailwindcss": "^3.3.2"
   }
 }
