--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^9.4.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
     "postcss": "^8.4.24",
