--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/aos": "^3.0.4",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react-countup": "^6.4.2",
+    "react-hook-form": "^7.45.1",
     "tailwindcss": "^3.3.2"
   }
 }
