--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
@@ -28,6 +29,7 @@
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/aos": "^3.0.4",
+    "@types/wavesurfer.js": "^6.0.6",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
     "postcss": "^8.4.24",
@@ -35,6 +37,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react-countup": "^6.4.2",
     "react-hook-form": "^7.45.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "wavesurfer.js": "^6.6.4"
   }
 }
